--- a/ViewTransitions/Example1/app/build.gradle
+++ b/ViewTransitions/Example1/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
     defaultConfig {
-        applicationId "net.kiwiapps.viewtransition"
+        applicationId "net.kiwiapps.viewtransition1"
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
